# dwipe

./: .gitignore  LICENSE  README.md  deploy  pyproject.toml  run.sh
src/dwipe/: main.py
src/zapdev/: PowerWindow.py  main.py
